# Dynamic-Target-Attack

./: .env.example  .gitignore  README.md  README_EN.md  README_zh.md  environment.yaml  pyproject.toml  requirements.txt
data/: README.md
scripts/: run_ablation_A1.sh  run_ablation_F_batch.sh  run_combined_attacker01.sh
src/: attacker_v3.py  combined_attacker.py  experiments_ablation.py  main.py  model_registry.py  openai_compat.py  project_paths.py  prompt_templates.py  random_search.py  reference_model.py  utils.py
src/eval/: run_harmfulness_eval.py
src/eval/harmfulness/: .env.example  README.md  README_zh.md  __init__.py  backends.py  cli.py  config.py  evaluators.py  pipeline.py
